# stringwind_rust

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  path_generation.rs  string_path.rs  string_setting.rs  tri_vec.rs  utils.rs
src/data/: color_names.csv
src/image_module/: color_conversion.rs  image_io.rs  img_analysis.rs  lab.rs  lines.rs  mod.rs
src/string_path/: io.rs  mod.rs  path_generation.rs  peg.rs  scoring.rs  string_path.rs  string_path_backup.rs  string_setting.rs
src/tests/: bench_settings.toml  path.csv  settings.toml  settings_template.toml
