[package]
name = "stringwind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
rayon = "1.5.3"
line_drawing = "1.0.0"
lerp = "0.4.0"
palette = "0.6.1"
itertools = "0.7.8"
geo = "0.23.0"
config = "0.13.1"
rand = "0.8.5"
show-image = "0.13.1"
log = "0.4.17"

[profile.dev]
opt-level=1
overflow-checks = true
debug=true

[profile.release]
debug = true
opt-level = 3

[features]
cielab_difference = []